[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/LightSpot.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Part.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Animal.png" type="Texture" id=5]
[ext_resource path="res://Music/HighBeep.wav" type="AudioStream" id=6]
[ext_resource path="res://Music/SignBoard.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 24 )

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 24 )

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.993378 )
colors = PoolColorArray( 0.254211, 0.441996, 0.765625, 1, 0.285156, 0.949738, 1, 1 )

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 1.13778, 1.13778 )
texture = ExtResource( 3 )
color = Color( 0.913725, 0.988235, 0.403922, 1 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 4 )
emitting = false
amount = 25
lifetime = 2.0
one_shot = true
explosiveness = 0.98
texture = ExtResource( 4 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 255.0
initial_velocity_random = 0.22
linear_accel = -30.0
scale_amount = 0.15
scale_amount_random = 0.37
color_ramp = SubResource( 5 )
hue_variation = 0.09
hue_variation_random = 0.9

[node name="Sprite2" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.952941, 0.462745, 1 )
material = SubResource( 6 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
